--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     activate:
       on-profile:
   datasource:
-    url: "jdbc:h2:mem:library;MODE=MYSQL;NON_KEYWORDS=USER"
+    url: "jdbc:h2:mem:boiler;MODE=MYSQL;NON_KEYWORDS=USER"
     username: "sa"
     password: ""
     driver-class-name: org.h2.Driver
@@ -30,6 +30,24 @@ spring:
           default:
             connectTimeout: 20000
             readTimeout: 20000
+management:
+  endpoint:
+    metrics:
+      enabled: true
+    prometheus:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: health, info, metrics, prometheus
+  metrics:
+    tags:
+      application: monitoring
+server:
+  tomcat:
+    mbeanregistry:
+      enabled: true
+
 
 springdoc:
   default-consumes-media-type: application/json
